--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,11 @@
 
   <dependencies>
     <dependency>
+      <groupId>org.reflections</groupId>
+      <artifactId>reflections</artifactId>
+      <version>0.10.2</version>
+    </dependency>
+    <dependency>
       <groupId>net.hoteljuliet.spel</groupId>
       <artifactId>spel</artifactId>
       <version>1.0-SNAPSHOT</version>
